[workspace]
  resolver = "2"
  members = [
    "crates/*",
    "examples/*",
  ]

[profile.dev]
  opt-level = 1

[workspace.package]
  authors     = ["Dominik Kaspar"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/bytestring-net/blueprint_ui"
  keywords    = ["ui", "component", "preset", "library", "bevy", "lunex"]
  categories  = ["gui"]

[workspace.dependencies]

  blueprint_ui = { path = "crates/blueprint_ui" }

  bevy_svg           = { path = "/home/dominik/Projects/Prototypes/bevy_svg", default-features = false, features = ["2d"] }
  bevy_vector_shapes = { version = "0.7.0" }
  bevy_lunex         = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex" }

  bevy = { version = "0.13.2", default_features = false, features = [
    #"bevy_asset",
    #"bevy_gilrs",
    "bevy_winit",
    "bevy_render",
    #"bevy_sprite",
    #"bevy_text",
    "multi-threaded",
    #"png",
    #"hdr",
    "x11",
    #"default_font",
  ] }
